# hyper-mcp

./: .dockerignore  .gitignore  .gitmodules  .hadolint.yaml  .pre-commit-config.yaml  CREATING_PLUGINS.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  RUNTIME_CONFIG.md  SKIP_TOOLS_GUIDE.md  config.example.json  config.example.yaml  justfile  mcp.example.json  plugin-schema.yaml  rust-toolchain.toml  server.json  xtp-plugin-schema.json
.cursor/rules/: print-ctx-size.mdc
.github/: dependabot.yml  renovate.json5
.github/workflows/: ci.yml  nightly.yml  release.yml
.windsurf/rules/: print-ctx-size.md  think.md
examples/plugins/arxiv/: Cargo.toml  README.md
examples/plugins/arxiv/src/: lib.rs
examples/plugins/browser/: Cargo.toml  Dockerfile  README.md
examples/plugins/browser/src/: lib.rs  pdk.rs
examples/plugins/context7/: Cargo.toml  README.md
examples/plugins/crates-io/: Cargo.toml  Dockerfile  README.md
examples/plugins/crates-io/src/: lib.rs
examples/plugins/crypto-price/: Dockerfile  README.md  main.go  pdk.gen.go
examples/plugins/eval-py/: Cargo.toml  README.md
examples/plugins/eval-py/src/: lib.rs
examples/plugins/fetch/: Cargo.toml  Dockerfile  README.md
examples/plugins/fetch/src/: lib.rs  pdk.rs
examples/plugins/fs/: Cargo.toml  Dockerfile
examples/plugins/fs/src/: lib.rs
examples/plugins/github/: README.md  gists.go  issues.go  main.go
examples/plugins/gitlab/: Cargo.toml  README.md
examples/plugins/gitlab/src/: lib.rs
examples/plugins/gomodule/: Cargo.toml  README.md
examples/plugins/hash/: Cargo.toml  Dockerfile  README.md
examples/plugins/hash/src/: lib.rs
examples/plugins/maven/: README.md
examples/plugins/meme-generator/: Cargo.toml  Dockerfile  README.md  generate_embedded.py  templates.json
examples/plugins/meme-generator/src/: embedded.rs  lib.rs
examples/plugins/memory/: Cargo.toml  Dockerfile  README.md
examples/plugins/myip/: Cargo.toml  Dockerfile  README.md
examples/plugins/myip/src/: lib.rs
examples/plugins/qdrant/: Cargo.toml  README.md
examples/plugins/qdrant-rag/: Cargo.toml
examples/plugins/qdrant-rag/src/: qdrant_client.rs
examples/plugins/qdrant/src/: lib.rs  qdrant_client.rs
examples/plugins/qr-code/: Cargo.toml  Dockerfile  README.md
examples/plugins/qr-code/src/: lib.rs  pdk.rs
examples/plugins/serper/: README.md
examples/plugins/serper/src/: lib.rs
examples/plugins/sqlite/: Cargo.toml
examples/plugins/think/: Cargo.toml  README.md
examples/plugins/think/src/: lib.rs
examples/plugins/time/: Cargo.toml  Dockerfile  README.md
examples/plugins/time/src/: lib.rs
examples/plugins/v1/arxiv/: Cargo.toml  README.md
examples/plugins/v1/context7/: README.md
examples/plugins/v1/context7/src/: lib.rs
examples/plugins/v1/crates-io/: README.md
examples/plugins/v1/crypto-price/: README.md  go.mod
examples/plugins/v1/eval-py/: Cargo.toml  Dockerfile  README.md
examples/plugins/v1/eval-py/src/: lib.rs  pdk.rs
examples/plugins/v1/fetch/: Cargo.toml  README.md
examples/plugins/v1/fs/: Cargo.toml
examples/plugins/v1/fs/src/: lib.rs
examples/plugins/v1/github/: Dockerfile  README.md  branches.go  files.go  go.mod  issues.go  pdk.gen.go  repo.go
examples/plugins/v1/gitlab/: Cargo.toml  README.md
examples/plugins/v1/gitlab/src/: lib.rs
examples/plugins/v1/gomodule/: Cargo.toml  README.md
examples/plugins/v1/gomodule/src/: lib.rs
examples/plugins/v1/hash/: Cargo.toml
examples/plugins/v1/hash/src/: lib.rs
examples/plugins/v1/maven/: Cargo.toml  README.md
examples/plugins/v1/maven/src/: lib.rs
examples/plugins/v1/meme-generator/: README.md  generate_embedded.py  templates.json
examples/plugins/v1/meme-generator/src/: embedded.rs  lib.rs
examples/plugins/v1/memory/: Cargo.toml  README.md
examples/plugins/v1/memory/src/: lib.rs
examples/plugins/v1/myip/: Cargo.toml  README.md
examples/plugins/v1/qdrant/: README.md
examples/plugins/v1/qdrant/src/: lib.rs
examples/plugins/v1/qr-code/: Cargo.toml  Dockerfile
examples/plugins/v1/qr-code/src/: lib.rs
examples/plugins/v1/serper/: Cargo.toml  README.md
examples/plugins/v1/sqlite/: Cargo.toml  Dockerfile  README.md
examples/plugins/v1/sqlite/src/: lib.rs
examples/plugins/v1/think/: README.md
examples/plugins/v1/think/src/: lib.rs
examples/plugins/v1/time/: Cargo.toml  README.md
examples/plugins/v1/time/src/: lib.rs
examples/plugins/v1/tool-list-changed/: Cargo.toml  Dockerfile  README.md  tool_list_changed.wasm
examples/plugins/v1/tool-list-changed/src/: lib.rs  pdk.rs
examples/plugins/v2/rstime/: Cargo.toml  Dockerfile  README.md  rstime.wasm
examples/plugins/v2/rstime/src/: lib.rs
examples/plugins/v2/rstime/src/pdk/: exports.rs
iac/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
src/: cli.rs  config.rs  https_auth.rs  logging.rs  main.rs  mod.rs  naming.rs  oci.rs  plugin.rs  plugins.rs  prompts.rs  resources.rs  service.rs  tools.rs  types.rs
src/schema/: config.json
src/wasm/: http.rs  mod.rs  oci.rs  s3.rs
templates/plugins/: README.md
templates/plugins/go/: .gitignore  Dockerfile  README.md  exports.go  go.mod  imports.go  main.go  types.go
templates/plugins/rust/: Cargo.toml  Dockerfile  README.md
templates/plugins/rust/src/: lib.rs
templates/plugins/rust/src/pdk/: imports.rs  mod.rs  types.rs
tests/fixtures/: config_with_auths.json  config_with_auths.yaml  documentation_example.json  documentation_example.yaml  invalid_auth_config.yaml  invalid_plugin_name.yaml  invalid_structure.yaml  invalid_url.yaml  keyring_auth_config.yaml  skip_tools_examples.yaml  valid_config.json  valid_config.yaml
wasm/: time.wasm
