[package]
name = "hyper-mcp"
version = "0.1.8"
edition = "2024"
authors = ["Tuan Anh Tran <me@tuananh.org>"]
description = " A fast, secure MCP server that extends its capabilities through WebAssembly plugins"
keywords = ["rust", "ai", "mcp", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/tuananh/hyper-mcp"
homepage = "https://github.com/tuananh/hyper-mcp"
documentation = "https://github.com/tuananh/hyper-mcp"

[dependencies]
anyhow = "1.0.98"
aws-config = { version = "1.8.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.98.0"
axum = "0.8.4"
bytesize = "2.0.1"
clap = { version = "4.5.40", features = ["derive", "env"] }
dashmap = "6.1.0"
dirs = "6.0.0"
docker_credential = "1.3.2"
extism = "1.11.1"
flate2 = "1.1.2"
hex = "0.4.3"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "linux-native",
    "windows-native",
] }
oci-client = "0.15.0"
once_cell = "1.21.3"
rmcp = { version = "0.8.0", features = [
    "server",
    "transport-io",
    "transport-sse-server",
    "transport-streamable-http-server",
] }
regex = { version = "1.11.3", features = ["unicode", "perf"] }
reqwest = { version = "0.12.21", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sigstore = { version = "0.12.1", features = ["cosign", "verify", "bundle"] }
tar = "0.4.44"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
futures = "0.3.31"
tempfile = "3.12.0"
tokio-test = "0.4.4"
tokio-util = "0.7.16"

[[bin]]
name = "hyper-mcp"
path = "src/main.rs"
