[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[lib]
name = "browser"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
base64-serde = "0.8.0"
headless_chrome = "1.0.9"
html2md = "0.2.14"
