[package]
name = "eval-py"
version = "0.1.0"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "=1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustpython-vm = { version = "0.4.0", default-features = false, features = ["compiler"] }
base64-serde = "0.8.0"
base64 = "0.22.1"

[profile.release]
lto = true
opt-level = 's'
strip = true

[target.wasm32-wasi.dependencies]
getrandom = { version = "0.2", features = ["js"] }
