[package]
name = "meme-generator"
version = "0.1.0"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
ab_glyph = "0.2.29"
image = "0.25.6"
imageproc = "0.25.0"
rusttype = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_yaml = "0.9"
extism-pdk = "=1.4.0"
base64-serde = "0.7"
base64 = "0.21"
