[package]
name = "plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
base64-serde = "0.8"
chrono = { version = "0.4", features = ["serde"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
