[package]
name = "sqlite"
version = "0.1.0"
edition = "2024"

[lib]
name = "plugin"
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
base64-serde = "0.8.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }

[build-dependencies]
cc = "1.0"
